--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     volumes:
       - ./public:/app/public
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3000/api/auth/session"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:3000/api/auth/session"]
       interval: 10s
       timeout: 10s
       retries: 10
