--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,8 +65,7 @@ services:
     volumes:
       - ./deployment/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      app:
-        condition: service_healthy
+      - app
     restart: unless-stopped
 
 volumes:
