--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,5 +1,22 @@
 events {
     worker_connections 1024;
+    # Default Catch-all (for IP access or unmatched domains)
+    server {
+        listen 80 default_server;
+        server_name _;
+        
+        location / {
+            proxy_pass http://neropanel;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
 
 http {
@@ -10,7 +27,7 @@ http {
     # Configuration for the Panel (UI)
     server {
         listen 80;
-        server_name panel.yourdomain.com;
+        server_name panel.neroservice.com;
 
         location / {
             proxy_pass http://neropanel;
@@ -28,7 +45,7 @@ http {
     # Configuration for the Host (Streaming/API)
     server {
         listen 80;
-        server_name dns.yourdomain.com;
+        server_name line.vpnerot.com;
 
         location / {
             proxy_pass http://neropanel;
