--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.9.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "node-cache": "^5.1.2",
