--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,8 +1,20 @@
+worker_processes auto;
+
 events {
-    worker_connections 1024;
+    worker_connections 4096;
+    use epoll;
+    multi_accept on;
 }
 
 http {
+    # Basic optimizations
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    client_max_body_size 20M;
+
     # Default Catch-all (for IP access or unmatched domains)
     server {
         listen 80 default_server;
